# government-updates

./: .gitignore  LICENSE  README.md  profile.md  pyproject.toml
.github/workflows/: weekly-digest.yml
src/digest/: assemble.py  brief.py  claude_client.py  deliver.py  models.py  normalize.py  pipeline.py  triage.py
src/digest/adapters/: austin.py  federal.py  texas.py
tests/: conftest.py  test_assemble.py  test_brief.py  test_claude_client.py  test_deliver.py  test_models.py  test_normalize.py  test_pipeline.py  test_triage.py
tests/adapters/: test_austin.py  test_federal.py  test_texas.py
tests/fixtures/: austin_socrata.json  federal_register_page1.json  federal_register_page2.json  texas_register_feed.xml  texas_register_issue.html
